@@ -67,9 +67,8 @@ if [[ -f "/etc/internaladdr.txt" ]]; then
 fi
 
 if [[ ! -z $(java -version 2>&1 |  grep "11.0") ]]; then
-    echo "Java version: $(java -version 2>&1), enabling ZGC"
-    export JAVA_TOOL_OPTIONS="${JAVA_TOOL_OPTIONS} -XX:+UnlockExperimentalVMOptions"
-    export JAVA_TOOL_OPTIONS="${JAVA_TOOL_OPTIONS} -XX:+UseZGC"
+    echo "Java version: $(java -version 2>&1), enabling G1GC"
+    export JAVA_TOOL_OPTIONS="${JAVA_TOOL_OPTIONS} -XX:+UseG1GC"
 else
     echo "Java version: $(java -version 2>&1), enabling G1GC"
     export JAVA_TOOL_OPTIONS="${JAVA_TOOL_OPTIONS} -XX:+UseG1GC -XX:+PrintGCTimeStamps"
